add golf favicons and add tags for variants

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,18 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicons.ico">
+    <!-- favicon formatting on other devices -->
+    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/favicons/golf-15-152-260738.png">
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicons/golf-15-144-260738.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/favicons/golf-15-152-260738.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/favicons/golf-15-144-260738.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/favicons/golf-15-120-260738.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/favicons/golf-15-114-260738.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/favicons/golf-15-72-260738.png">
+    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/favicons/golf-15-57-260738.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicons/golf-15-32-260738.png" sizes="32x32">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
