--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+    <script>
+      // Initialize Firebase
+      const config = {
+        apiKey: "AIzaSyBuTfES2A_Mkr3FU2awGCcJc4uWsGN41nc",
+        authDomain: "golf-journal-app.firebaseapp.com",
+        databaseURL: "https://golf-journal-app.firebaseio.com",
+        projectId: "golf-journal-app",
+        storageBucket: "golf-journal-app.appspot.com",
+        messagingSenderId: "80236178660"
+      };
+      firebase.initializeApp(config);
+    </script>
   </body>
 </html>
