--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/favicons/golf-15-72-260738.png">
     <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/favicons/golf-15-57-260738.png">
     <link rel="icon" href="%PUBLIC_URL%/favicons/golf-15-32-260738.png" sizes="32x32">
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -62,5 +63,6 @@
       };
       firebase.initializeApp(config);
     </script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
   </body>
 </html>
