comment out firebase auth

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script>
       // Initialize Firebase
@@ -62,6 +62,6 @@
       };
       firebase.initializeApp(config);
     </script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script> -->
   </body>
 </html>
